--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -4,3 +4,8 @@ spring.datasource.password=root
 spring.datasource.driverclassname=com.mysql.jdbc.Driver
 spring.jpa.show-sql=false
 spring.jpa.hibernate.ddl-auto=update
+
+
+#sprign data REST properties (optional)
+spring.data.rest.base-path=/myapi
+spring.data.rest.default-page-size=3
